fix(tape mode): tab and newline characters breaking caret alignment

--- a/frontend/src/styles/test.scss
+++ b/frontend/src/styles/test.scss
@@ -242,7 +242,7 @@
       }
       &.tabChar,
       &.nlChar {
-        margin: 0 0.25rem;
+        // margin: 0 0.25rem;
         opacity: 0.2;
         i {
           line-height: 0;
